[gd_scene load_steps=8 format=3 uid="uid://cax37ia2twygg"]

[ext_resource type="Script" path="res://Scripts/CameraControler.gd" id="1_jhrg4"]
[ext_resource type="Script" path="res://Scripts/Generator.gd" id="2_oldof"]
[ext_resource type="Script" path="res://Scripts/StatsPanel.gd" id="3_8fgxk"]
[ext_resource type="Texture2D" uid="uid://cr3f3dnei7mrh" path="res://Sprites/marker.png" id="4_5ci74"]
[ext_resource type="Script" path="res://Scripts/Marker.gd" id="5_tvsvv"]
[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="6_bpo4m"]
[ext_resource type="Script" path="res://Scripts/DataCollector.gd" id="7_myep7"]

[node name="Scene" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.8, 0.8)
script = ExtResource("1_jhrg4")

[node name="Generator" type="Node" parent="."]
script = ExtResource("2_oldof")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StatsPanel" type="Panel" parent="CanvasLayer"]
visible = false
top_level = true
offset_left = 62.0
offset_top = 390.0
offset_right = 509.0
offset_bottom = 978.0
script = ExtResource("3_8fgxk")

[node name="Container" type="VBoxContainer" parent="CanvasLayer/StatsPanel"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 0
offset_right = 733.0
offset_bottom = 100.0

[node name="Energy" type="RichTextLabel" parent="CanvasLayer/StatsPanel/Container"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.3
text = "  Energy:"

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/StatsPanel/Container"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.3
text = "  Hello"

[node name="RichTextLabel3" type="RichTextLabel" parent="CanvasLayer/StatsPanel/Container"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.3
text = "  Hello"

[node name="Panel" type="Panel" parent="CanvasLayer/StatsPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 110.0
offset_right = 425.0
offset_bottom = 563.0

[node name="Marker" type="Sprite2D" parent="CanvasLayer"]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_5ci74")
script = ExtResource("5_tvsvv")

[node name="PauseMenu" type="Panel" parent="CanvasLayer"]
process_mode = 3
visible = false
offset_left = 772.0
offset_top = 364.0
offset_right = 1146.0
offset_bottom = 720.0
script = ExtResource("6_bpo4m")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu"]
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 374.0
offset_bottom = 354.0
theme_override_constants/separation = 41
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Pause Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExportDataButton" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Export Data"

[node name="ExportSimulationButton" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Save Simulation"

[node name="QuitButton" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="ExportSimulationDialog" type="FileDialog" parent="CanvasLayer"]
process_mode = 2
size = Vector2i(392, 517)
filters = PackedStringArray("*.tscn")

[node name="ExportDataDialog" type="FileDialog" parent="CanvasLayer"]
process_mode = 2
filters = PackedStringArray("*.csv")

[node name="DataCollector" type="Node" parent="."]
script = ExtResource("7_myep7")

[node name="Timer" type="Timer" parent="DataCollector"]
wait_time = 5.0

[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/ExportDataButton" to="CanvasLayer/PauseMenu" method="_on_export_data_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/ExportSimulationButton" to="CanvasLayer/PauseMenu" method="_on_export_simulation_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/QuitButton" to="CanvasLayer/PauseMenu" method="_on_quit_button_pressed"]
[connection signal="file_selected" from="CanvasLayer/ExportSimulationDialog" to="CanvasLayer/PauseMenu" method="_on_export_simulation_dialog_file_selected"]
[connection signal="file_selected" from="CanvasLayer/ExportDataDialog" to="Camera2D" method="_on_export_data_dialog_file_selected"]
[connection signal="timeout" from="DataCollector/Timer" to="DataCollector" method="_on_timer_timeout"]
